--- a/app/assets/stylesheets/uploads.scss
+++ b/app/assets/stylesheets/uploads.scss
@@ -95,7 +95,6 @@
 }
 
 .ascii-spinner {
-  visibility: none;
   border: 16px solid #f3f3f3;
   border-top: 16px solid #04aa6d;
   border-radius: 50%;
